--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
  DATABASE_NAME = "Clothing-App-DB"
  PRIVATE_KEY_PATH ="./keys/private_key.pem"
  PUBLIC_KEY_PATH = "./keys/public_key.pem"
+ screatKey ="tharangani#$7huiygfjyo;hpjoj.ngyufrfug,joi;uu89g.mgtfyrr67"
